force-app/main/default/objects/Subscription__mdt/Subscription__mdt.object-meta.xml
<CustomObject>
    <label>Subscription</label>
    <pluralLabel>Subscriptions</pluralLabel>
</CustomObject>