force-app/main/default/objects/Subscription__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <referenceTo>Channel__mdt</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>