force-app/main/default/objects/Subscription__mdt/fields/ChannelHandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>ChannelHandlerClassName__c</fullName>
    <label>Channel Handler</label>
    <referenceTo>ChannelHandler__mdt</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>