force-app/main/default/objects/Subscription__mdt/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <label>Subscriber</label>
    <referenceTo>Subscriber__mdt</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>