force-app/main/default/objects/Subscription__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Subscriber__c</columns>
    <columns>Channel__c</columns>
    <columns>ChannelHandlerClassName__c</columns>
    <columns>ExecutionOrder__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>